# Mechanics-Sidekick

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  config.py  db.py
app/agent/: mcp_host.py  orchestrator.py  provider.py  recalls_client.py  tools.py
app/api/: deps.py  ingestion.py  main.py  schemas.py  server.py
app/db/: __init__.py  migrations.py  session.py
app/diagnostic/: anomaly.py  commentary.py  diagnosis.py  protocol.py  report.py  session.py
app/models/: __init__.py  chat_message.py  diagnostic_session.py  document.py  document_chunk.py  job.py  live_sample.py  live_session.py  vehicle.py
app/rag/: grader.py  loop_state.py  prompt_builder.py  query_rewriter.py  similarity.py
app/repositories/: chat_repository.py  chunk_repository.py  diagnostic_session_repository.py  document_repository.py  job_repository.py  live_sample_repository.py  live_session_repository.py  vehicle_repository.py
app/services/: agentic_chat_service.py  chat_service.py  chunking_service.py  contextualization_service.py  document_service.py  embedding_service.py  factories.py  hybrid_retrieval_service.py  job_service.py  llm_backend.py  llm_factory.py  metadata_extractor.py  ollama_service.py  openai_service.py  pdf_service.py  reranker.py  retrieval_service.py  structured_chunking_service.py  table_chunker.py  vehicle_service.py
app/telemetry/: manager.py  parse.py  pids.py  recorder.py  sampler.py
app/utils/: console.py  paths.py
docs/: USAGE.md  portfolio-review-2026-05-19.md  v2-ideas.md
evals/: README.md  diff.py  eval_set.json  golden.py  golden_questions.json  golden_questions_tables.json  grader.py  metrics.py  run_eval.py  run_evals.py  runner.py  seed.py
evals/reports/: 1A-hybrid-rerank.json  1A-hybrid.json  1A-rerank.json  baseline.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  echarts.ts  main.ts  markdown.ts  style.css
tests/: conftest.py  test_cli.py  test_config.py  test_config_phase3.py  test_db.py
tests/fixtures/: stub_mcp_server.py
tests/test_agent/: test_diagnostic_tool.py  test_mcp_host.py  test_mcp_schema.py  test_orchestrator.py  test_provider.py  test_provider_max_tokens.py  test_recalls.py  test_tools.py  test_web_search.py
tests/test_api/: conftest.py  test_chat.py  test_config_endpoint.py  test_diagnostic.py  test_documents_read.py  test_documents_upload.py  test_health.py  test_jobs.py  test_scanner.py  test_spa_fallback.py  test_telemetry.py  test_vehicles.py
tests/test_db/: test_migrations.py
tests/test_diagnostic/: test_anomaly.py  test_commentary.py  test_config_diagnostic.py  test_diagnosis.py  test_protocol.py  (+3 more)
(+124 files in other folders)
