[project]
name = "mechanic-sidekick"
version = "0.1.0"
description = "A local terminal RAG assistant for mechanics"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "pymupdf>=1.24",
    "typer>=0.12",
    "rich>=13.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
]

[project.scripts]
mechanic-sidekick = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]
