[project]
name = "mechanic-sidekick"
version = "0.1.0"
description = "A local terminal RAG assistant for mechanics"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "pymupdf>=1.24",
    "typer>=0.12",
    "rich>=13.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "fastapi>=0.137.1",
    "uvicorn[standard]>=0.49.0",
    "openai>=2.43.0",
    "python-multipart>=0.0.32",
    "mcp>=1.28,<2",
    "tavily-python>=0.7.26",
]

[project.scripts]
mechanic-sidekick = "app.cli:app"
mechanic-sidekick-api = "app.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore:Using `httpx` with `starlette.testclient` is deprecated"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
    "pytest-mock>=3.14",
]
# Optional: local cross-encoder reranker (RERANK_PROVIDER=local). Not in the base install —
# pulls onnxruntime; enable with `uv sync --group rerank`.
rerank = [
    "flashrank>=0.2",
]
